# FileTrimming

./: .env.example  .gitignore  __init__.py  base.py  chunking_report.txt  config.py  document_processing_pipeline_design.md  file_classifier.py  inspect_xlsx_report.json  inspect_xlsx_report.txt  llm_client.py  logging_utils.py  main.py  pipeline.py  pipeline_design_v2.md  profile_report.json  profile_report.txt  pyproject.toml  requirements.txt  step1_copy.py  step2_normalize.py  step3_split.py  step4_markdown.py  step5_structure.py  step6_chunk.py  token_counter.py
docs/: P2_implementation_plan.md  P3_implementation_plan.md  P4_implementation_plan.md  P5_implementation_plan.md  P6_implementation_plan.md  Task.md  テーブル構造再構成_LLM活用_レビュー指摘.md  テーブル構造再構成_LLM活用検討.md  ドキュメント処理パイプライン詳細設計書_v2.md
input/: approval_request.xlsx  change_history.docx  change_history.xlsx  comments_and_annotations.xlsx  excel_form_grid.xlsx  formulas_and_formats.xlsx  invoice_print_layout.xlsx  large_workbook.xlsx  ledger_with_sections.xlsx  many_images.docx  many_images.xlsx  many_objects.docx  many_tables.docx  many_tables.xlsx  merged_cells.docx  merged_cells.xlsx  mixed_complex.docx  mixed_complex.xlsx  multiple_tables_sheet.xlsx  oasys_style.docx  outline_and_filter.xlsx  overlay_workflow.docx  protected_master_validation.xlsx  timesheet_calendar.xlsx  wareki_and_normalization.xlsx
llm/: __init__.py  base.py  factory.py  ollama_client.py  openai_client.py
src/: config.py  main.py
steps/: __init__.py  base.py  step1_copy.py  step2_normalize.py  step3_split.py  step4_markdown.py  (+2 more)
(+144 files in other folders)
